# curio

./: Cargo.toml  readme.md
docs/: curio.sketch  ibom.html
enclosure/: curio.scad
pcb/: curio.kicad_pcb  curio.kicad_prl  curio.kicad_pro  curio.kicad_sch  curio.kicad_sym  fp-lib-table  sym-lib-table
src/: control.rs  display.rs  ir.rs  lib.rs  pins.rs
