[package]
name = "curio-bsp"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Board support crate for Curio: Glorified Infrared Remote Control."
categories = ["no-std"]
documentation = "https://docs.rs/curio"
repository = "https://github.com/dotcypress/curio"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
stm32g0xx-hal = { version = "0.2.0", features = ["rt", "stm32g030"] }
klaptik = { version = "0.2.0", features = ["st7567"] }
infrared = { version = "0.14.1", features = ["defmt"] }

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
